--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 //**公共样式***********************************************/
-$color_default: #a5a5a5; // 默认字体颜色
+$color_default: #000; // 默认字体颜色
 $color_white: #fff; // 白色
 $color_black: #000; // 黑色
 $color_bg: #002a40; // 背景色-深蓝色 top、弹框、下拉框等
