--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,16 @@
     cursor: pointer;
     border-radius: 4px;
 }
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.flex-col{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
